# cil-bindings

./: ProjectHome.md
gstreamer-sharp/: AUTHORS  configure.ac  gapi-codegen-checkparamscount.patch  gapi2_codegen.exe.mdb
gstreamer-sharp/doc/en/Gst/: ActivateMode.xml  AllocTrace.xml  AllocTraceFlags.xml  Application.xml  Bin.xml  Buffer.xml  BusSyncReply.xml  Caps.xml  CapsFlags.xml  CastT.xml  ChildProxy.xml  CommonTags.xml  DecodeBin.xml  PlayBin.xml  TypeFindElement.xml
gstreamer-sharp/samples/: GtkVideoPlayer.cs  Makefile.am  MetaData.cs  TypeFind.cs
gstreamer-sharp/sources/: DynamicSignal.cs  Makefile.am  Object.custom  gstreamer-sharp-api.raw  gstreamer-sharp-sources.xml  gstreamer-sharp.metadata  gstreamer-sharp.pc.in
gstreamer-sharp/sources/glue/: Makefile.am
swfdec-sharp/: COPYING  configure.ac
swfdec-sharp/doc/en/: GtkSharp.SwfdecSharp.xml  Swfdec.xml  index.xml
swfdec-sharp/doc/en/Swfdec/: Alignment.xml  AsContextState.xml  AsDeleteReturn.xml  AsFrame.xml  AsFunction.xml  AsObject.xml  AsScope.xml  AsStack.xml  AsValue.xml  AsVariableFlag.xml  Buffer.xml  BufferFreeFunc.xml  BufferQueue.xml  FileLoader.xml  GtkSystem.xml  GtkWidget.xml  Loader.xml  LoaderDataType.xml  LoaderRequest.xml  PlayerScripting.xml  Socket.xml
swfdec-sharp/samples/: GtkTest.cs  Makefile.am
swfdec-sharp/sources/: swfdec-sharp-api.raw  swfdec-sharp.metadata  swfdec-sharp.snk
trunk/gstreamer-sharp/: Makefile.am  configure.ac
trunk/gstreamer-sharp/doc/en/GLib/: DynamicSignal.xml
trunk/gstreamer-sharp/doc/en/Gst/: AssocFlags.xml  BinFlags.xml  BindingHelper.xml  BufferCopyFlags.xml  BufferFlag.xml  Bus.xml  BusFlags.xml  ChildProxyAdapter.xml  ChildProxyImplementor.xml  HaveTypeArgs.xml  NewDecodedPadArgs.xml  Version.xml
trunk/gstreamer-sharp/samples/: GtkVideoPlayer.cs  Makefile.am  MetaData.cs  TypeFind.cs
trunk/gstreamer-sharp/sources/: Makefile.am  gstreamer-sharp-api.raw  gstreamer-sharp-sources.xml  gstreamer-sharp.dll.config.in  gstreamer-sharp.metadata
trunk/gstreamer-sharp/sources/glue/: Makefile.am  closure.c
trunk/gstreamer-sharp/sources/plugins-base/: XvImageSink.cs
trunk/swfdec-sharp/: AUTHORS  configure.ac
trunk/swfdec-sharp/doc/en/GtkSharp.SwfdecSharp/: ObjectManager.xml
trunk/swfdec-sharp/doc/en/Swfdec/: As.xml  AsArray.xml  AsContext.xml  AsDebugger.xml  AsNative.xml  AsNativeFunction.xml  AsStackIterator.xml  AsValueType.xml  AsVariableForeach.xml  Audio.xml  Global.xml  GtkLoader.xml  GtkPlayer.xml  GtkSocket.xml  Key.xml  MouseCursor.xml  Player.xml  Rectangle.xml  ScaleMode.xml  Script.xml  Stream.xml  SwfdecSystem.xml  URL.xml
trunk/swfdec-sharp/sources/: Makefile.am  swfdec-sharp-api.raw  swfdec-sharp-sources.xml  swfdec-sharp.dll.config.in  swfdec-sharp.metadata
